# minimal_hibf

./: CMakeLists.txt  README.md
.github/workflows/: ci_coverage.yml  ci_linux.yml  ci_macos.yml
cmake/test/: add_local_data.cmake  config.cmake  declare_datasource.cmake
src/: CMakeLists.txt  build.cpp  build.hpp  config.hpp  main.cpp  run.cpp  run.hpp  search.cpp  search.hpp  validator.hpp
test/: cli_fastq_coversion_test.cpp
