# SPDX-FileCopyrightText: 2006-2025 Knut Reinert & Freie Universität Berlin
# SPDX-FileCopyrightText: 2016-2025 Knut Reinert & MPI für molekulare Genetik
# SPDX-License-Identifier: BSD-3-Clause

cmake_minimum_required (VERSION 3.25)

# An object library (without main) to be used in multiple targets.
# You can add more external include paths of other projects that are needed for your project.
add_library (minimal_hibf_lib STATIC run.cpp build.cpp search.cpp)
target_link_libraries (minimal_hibf_lib PUBLIC sharg::sharg seqan::hibf)

target_compile_options (minimal_hibf_lib PUBLIC "-pedantic" "-Wall" "-Wextra")

if ("${CMAKE_CXX_COMPILER_ID}" STREQUAL "GNU")
    # Disable warning about std::hardware_destructive_interference_size not being ABI-stable.
    if (CMAKE_CXX_COMPILER_VERSION VERSION_GREATER_EQUAL 12)
        target_compile_options (minimal_hibf_lib PUBLIC "-Wno-interference-size")
    endif ()

    # Warn about failed return value optimization.
    if (CMAKE_CXX_COMPILER_VERSION VERSION_GREATER_EQUAL 14)
        target_compile_options (minimal_hibf_lib PUBLIC "-Wnrvo")
    endif ()
endif ()

# Add the application.
add_executable (minimal_hibf main.cpp)
target_link_libraries (minimal_hibf PRIVATE minimal_hibf_lib)
